bugs correction and new feature
-images that are too small were stretched or stayed too small

-posts/projects selection on profile are now more intuitive

--- a/app/(client)/profile/components/profile.module.scss
+++ b/app/(client)/profile/components/profile.module.scss
@@ -6,11 +6,11 @@
 }
 
 .underScore {
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   div {
-    width: 120px;
     height: 4px;
     background-color: $medium-primary;
     border-radius: 10px;
@@ -18,11 +18,15 @@
 }
 
 .underScore:hover {
-  div{
+  div {
     width: 100%;
     animation-name: expandUnderscore;
     animation-duration: 0.5s;
   }
+}
+
+.selectedPosts{
+    width: 100%;
 }
 
 @keyframes expandUnderscore {
